<resources>
    <string name="app_name">What\'s The Word</string>
    <string name="login_screen">Login Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="login_button">Login</string>
    <string name="skip_login">Skip Login</string>
    <string name="search">Lookup</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="new_user2">Enter your email</string>
    <string name="new_password">Enter your password</string>
    <string name="create_login">Create Login</string>
    <string name="cancel">Cancel</string>
    <string name="new_user3">Create New User</string>
    <string name="newUserName">Enter Your First Name</string>
    <string name="newUserName2">Enter your Last Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="definition">Definition Will Display Here</string>
    <string name="add_to_favs">Add to favorites</string>
    <string name="return_to_search">Back To Lookup</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>

    <string-array name="longClickMenu">
        <item>Delete</item>
    </string-array>
</resources>

