<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/newUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_user2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLastName" />

    <TextView
        android:id="@+id/newPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEmail" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_action_username"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserText" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password"
        android:drawableStart="@drawable/ic_action_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordText" />

    <Button
        android:id="@+id/createLoginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/create_login"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/newUserFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/newUserName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userFirstName"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstName"
        android:drawableStart="@drawable/ic_action_username"
        android:drawableLeft="@drawable/ic_action_username"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserFirstName"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/newUserLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/newUserName2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userFirstName" />

    <EditText
        android:id="@+id/userLastName"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastName"
        android:drawableStart="@drawable/ic_action_username"
        android:drawableLeft="@drawable/ic_action_username"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserLastName" />


</androidx.constraintlayout.widget.ConstraintLayout>