<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:focusable="true"
    tools:context=".SearchScreen">


    <EditText
        android:id="@+id/search_bar"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="77dp"
        android:ellipsize="start"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchScreenLogo"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/searchScreenLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whatsthewordlogo" />

    <TextView
        android:id="@+id/definitionBox"
        android:layout_width="367dp"
        android:layout_height="128dp"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="191dp"
        android:layout_marginRight="191dp"
        android:gravity="center_horizontal"
        android:hint="@string/definition"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <Button
        android:id="@+id/search1ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definitionBox" />

</androidx.constraintlayout.widget.ConstraintLayout>